--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ left: 0.6em;
 
 #testimonials {
   padding: 5rem 0;
-  background: rgba(243, 243, 243);
+  background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5));
 }
 
 .testimonial-title {
@@ -433,7 +433,10 @@ left: 0.6em;
 
 #contact {
   padding: 5rem 0;
-  background: rgb(226, 226, 226);
+  /* background: rgb(226, 226, 226); */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 1.0)), url('https://i.insider.com/5dc498fe695b58645d6f1dbc?width=700');
+  background-size: cover;
+  
 }
 
 .contact-container {
@@ -502,7 +505,7 @@ left: 0.6em;
   padding: 2.6rem;
   font-weight: 500;
   color: #fff;
-  background: rgb(32 30 30);
+  background: #111;
 }
 
 /* ......../ media query /.......... */
@@ -708,7 +711,6 @@ left: 0.6em;
 
 
 
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
@@ -718,12 +720,12 @@ left: 0.6em;
 }
 
 .container_1{
-  position: center;
-  /* width: 400px; */
-  background: rgb(32 30 30);
+  position: relative;
+  width: 100%;
+  background: rgb(20, 19, 19);
   padding: 20px 30px;
   border: 1px solid #444;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -753,9 +755,9 @@ left: 0.6em;
   display: none;
 }
 .star-widget label{
-  font-size: 60px;
+  font-size: 40px;
   color: #444;
-  padding: 50px;
+  padding: 10px;
   float: right;
   transition: all 0.2s ease;
 }
@@ -791,25 +793,18 @@ input#rate-5:checked ~ label{
 input:checked ~ form{
   display: block;
 }
-form header {
+form header{
   width: 100%;
-  font-size: 35px;
+  font-size: 25px;
   color: #fe7;
   font-weight: 500;
   margin: 5px 0 20px 0;
   text-align: center;
   transition: all 0.2s ease;
 }
-
-form .textarea_1 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 form .textarea{
-  
-  height: 200px;
-  width: 70%;
+  height: 100px;
+  width: 100%;
   overflow: hidden;
 }
 form .textarea textarea{
@@ -818,47 +813,54 @@ form .textarea textarea{
   outline: none;
   color: #eee;
   border: 1px solid #333;
-  background: #afafaf;
+  background: #222;
   padding: 10px;
   font-size: 17px;
   resize: none;
-  border-radius: 15px;
 }
 .textarea textarea:focus{
   border-color: #444;
+  border-radius: 10px;
 }
-form .btn {
-  display: flex;
-  justify-content: center;
-  height: 20%;
+form .btn{
+  height: 45px;
   width: 100%;
-  margin: 25px 0;
+  margin: 15px 0;
+  
 }
 form .btn button{
   height: 100%;
-  width: 30%;
+  width: 100%;
   border: 1px solid #444;
   outline: none;
   background: #222;
   color: #999;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 500;
   text-transform: uppercase;
   cursor: pointer;
   transition: all 0.3s ease;
-  border-radius: 10px ;
-  padding: 20px;
+  
 }
 form .btn button:hover{
   background: #1b1b1b;
 }
 
-.heading_2 {
-  font-size: 2.1em;
-  margin-bottom: 10px;
-  padding-bottom: 10px ;
-  text-align: center;
-  color: #aaa;
-  font-weight: bold;
+.star-widget .heading_2
+{
+  color: white;
 }
 
+.container_2{
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background: rgb(228, 223, 223);
+  padding: 10px 20px;
+  border: 1px solid #444;
+  /* border-radius: 5px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
