--- a/style.css
+++ b/style.css
@@ -8,14 +8,109 @@
   margin: 0;
 }
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+	
+	scroll-behavior: smooth;
+}
+
+
+
+
+
 .html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: "Poppins", sans-serif;
+  
 }
 
+.smoothscroll
+{
+  scroll-behavior: smooth;
+}
 /* ///////////..utility classes../////////// */
 
 .container {
@@ -162,10 +257,7 @@ left: 0.6em;
 
 .showcase-area {
   height: 50vh;
-  background: linear-gradient(
-      rgba(240, 240, 240, 0.144),
-      rgba(255, 255, 255, 0.336)
-    ),
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("https://png.pngtree.com/background/20210710/original/pngtree-food-overlooking-the-background-banner-picture-image_1055258.jpg");
   background-size: cover;
   background-position: center;
@@ -863,4 +955,47 @@ form .btn button:hover{
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+@media screen and (max-width: 376px) {
+  .container_1{
+    position: relative;
+    width: 100%;
+    background: rgb(20, 19, 19);
+    padding: 20px 30px;
+    border: 1px solid #444;
+    /* border-radius: 5px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .star-widget label{
+    font-size: 40px;
+    color: #444;
+    padding: 5px;
+    float: right;
+    transition: all 0.2s ease;
+  }
+
+
+  
+  
+}
+
+@media screen and (max-width: 611px){
+  .container_2{
+    position: relative;
+    width: 100%;
+    height: 400px;
+    background: rgb(228, 223, 223);
+    padding: 5px 5px;
+    border: 1px solid #444;
+    /* border-radius: 5px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }  
 }
